data/derived/sp14/progs/unify/prog0378.ml.out
Characters 444-465:
  | DivideByOne (e1,e2,e3) -> sin((1.0 /. eval(e1,x,y)) + (1.0 /. eval(e2,x,y)) + (1.0 /. eval(e3,x,y)));;
                                  ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
